Fix order on mobile screens (#29)

--- a/src/styles/modules/layout.css
+++ b/src/styles/modules/layout.css
@@ -20,12 +20,15 @@
 /* 
     Flex Ordering 
 */
-.order-0 {
-  order: 0;
-}
 .order-1 {
-  order: 1;
+  order: unset;
+  @media (--medium-viewport) {
+    order: 1;
+  }
 }
 .order-2 {
-  order: 2;
+  order: unset;
+  @media (--medium-viewport) {
+    order: 2;
+  }
 }
